final big commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,37 @@
     <string name="alreadyOurMember">Already our member?</string>
     <string name="signIn">Login</string>
     <string name="signUpButtonLabel">Sign Up</string>
+    <string name="userGreeting">"Hello, "</string>
+    <string name="inspirationalQuote">Are you ready for learning today?</string>
+    <string name="topUsersLabel">Top users:</string>
+    <string name="pointsLabel">" points"</string>
+    <string name="guessTheAnimalModeLabel">Guess the Animal</string>
+    <string name="wordPracticeModeLabel">Word Practice</string>
+    <string name="auditionModeLabel">Audition</string>
+    <string name="gameModeLabel">Game</string>
+    <string name="availableExcercisesLabel">Available excercises</string>
+    <string name="passwordFieldPlaceholder">●●●●●</string>
+    <string name="emailFieldPlaceholder">Email</string>
+    <string name="quizTaskLabel">Write who is on image</string>
+    <string name="quizFieldPlaceholed">Your Answer</string>
+    <string name="languageSelectButtonLabel">Choose</string>
+    <string name="quizNextButtonLabel">Next</string>
+    <string name="quizTryAgainButtonLabel">Try Again</string>
+    <string name="guessTheAnimalHeader">Guess the animal</string>
+    <string name="correctAnswerCongrats">Holly Molly! That is Right!</string>
+    <string name="wrondAnswerTitle">"Eh? Wrong answer :(\nThat is: "</string>
+    <string name="quizCheckButtonLabel">Check</string>
+    <string name="wordsCheckButtonLabel">Check</string>
+    <string name="wordsModeHeader">Word practice</string>
+    <string name="auditionPreparationLabel">"Please press button and say this word. Our service will check your pronunciation "</string>
+    <string name="auditionCheckButtonLabel">Check my speech</string>
+    <string name="auditionYourResult">Your result:</string>
+    <string name="auditionResultPlaceholer" />
+    <string name="auditionNextButton">Yay! Go next</string>
+    <string name="AuditionTitle">Listening</string>
+    <string name="userName">Alexey</string>
+    <string name="switchThemeButton">Switch Theme</string>
+    <string name="changeLanguageButton">Change your motherlanguage</string>
+    <string name="changeProfilePic">Change your image</string>
+    <string name="logOutButton">Logout</string>
 </resources>
